- alle emph in highl
git-svn-id: https://svn.lug-jena.de/uni-skripte@812 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/alt-linopt/skript.latex
+++ b/alt-linopt/skript.latex
@@ -226,13 +226,13 @@ Sei $D\subset \R^n$ nichtleer und offen, $f\colon D\rightarrow \R,
   \min_{x\in\FF} f(x)
 \end{gather}
 
-Die Funktion $f$ heißt \emph{Ziel-} oder \emph{Kostenfunktion}.
+Die Funktion $f$ heißt \highl[Zielfunktion]{Ziel-} oder \highl{Kostenfunktion}.
 \begin{description}
 \item[$\FF=D$] unrestringiertes Optimierungsproblem
   (Optimierungsproblem ohne Nebenbedingungen)
 \item[$\FF\subset D$] restringiertes Optimierungsproblem
   (Optimierungsproblem mit Nebenbedingungen), $\FF$ heißt
-  \emph{zulässige Menge} und wird meist durch (Un-)gleichungen beschrieben.
+  \highl[Menge!zulässige]{zulässige Menge} und wird meist durch (Un-)gleichungen beschrieben.
 \end{description}
 
 \begin{bsp}
@@ -241,20 +241,23 @@ Die Funktion $f$ heißt \emph{Ziel-} oder \emph{Kostenfunktion}.
 \end{bsp}
 
 \begin{defin}[Lokale Minima]
-  Ein Punkt $\tilde{x}\in\FF$ (zulässiger Punkt) heißt \emph{lokales
-    Minimum} von $f$ auf $\FF$ oder \emph{lokale Lösung} von
+  Ein Punkt $\tilde{x}\in\FF$ (zulässiger Punkt) heißt
+  \highl[Minimum!lokales]{lokales Minimum} von $f$ auf $\FF$ oder
+  \highl[Lösung!lokale]{lokale Lösung} von
   \autoref{eq:P}, falls es ein $r>0$ mit $f(x)\geq f(\tilde{x})$ für
   alle $x\in\FF\cap B(\tilde{x}, r)$ gibt.
 
-  Ein Punkt $\tilde{x}\in\FF$ heißt \emph{striktes lokales Minimum}
-  von $f$ auf $\FF$ oder \emph{strikte lokale Lösung}  von
+  Ein Punkt $\tilde{x}\in\FF$ heißt \highl[Minimum!striktes
+  lokales]{striktes lokales Minimum} von $f$ auf $\FF$ oder
+  \highl[Lösung!strikte lokale]{strikte lokale Lösung} von
   \autoref{eq:P}, falls es ein $r>0$ mit $f(x)>f(\tilde{x})$ für alle
   $x\in \FF\cap B(\tilde{x}, r)$ mit $x\neq \tilde{x}$ gibt.
 \end{defin}
 
 \begin{defin}[globales Minimum]
-  Ein Punkt $\tilde{x}\in\FF$ heißt \emph{globales Minimum} von $f$
-  auf $\FF$, falls gilt $\forall x\in\FF\colon f(x)\geq f(\tilde{x})$
+  Ein Punkt $\tilde{x}\in\FF$ heißt \highl[Minimum!globales]{globales
+  Minimum} von $f$ auf $\FF$, falls gilt $\forall x\in\FF\colon
+  f(x)\geq f(\tilde{x})$
 \end{defin}
 
 \begin{bem*}
@@ -262,9 +265,10 @@ Die Funktion $f$ heißt \emph{Ziel-} oder \emph{Kostenfunktion}.
   $x\in\FF$ ist äquivalent zur Minimierung. Das Problem wird als $\min
   f(x) := -g(x)$ definiert.
 
-  Anstatt lokales Minimum sagt man auch \emph{relatives
-    Minimum}. Anstatt striktes Minimum sagt man auch \emph{strenges
-    Minimum}.
+  Anstatt lokales Minimum sagt man auch
+    \highl[Minimum!relatives]{relatives Minimum}. Anstatt striktes
+    Minimum sagt man auch
+  \highl[Minimum!strenges]{strenges Minimum}.
 
   Eine linere Optimierungsaufgabe besteht aus einer linearen Funktion
   $f$ und $\FF$ wird aus linearen (Un-)gleichungen beschrieben.
@@ -405,9 +409,9 @@ k=1,2,3, \ldots$ mit dem Ziel:
 Diese numerische Verfahren berechnen nur eine Näherungslösung. Da die
 Zielfunktion zu minimieren ist, versucht man, die Folge $x^{(k)}$ so
 zu berechnen, dass $f(x^{(k+1)})< f(x^{(k)})$ ist. Dies nennt man
-\emph{Abstiegsverfahren}. Prinzipiell geht man dabei wie folgt vor:
+\highl{Abstiegsverfahren}. Prinzipiell geht man dabei wie folgt vor:
 \begin{itemize}
-\item  Man berechnet eine Abstiegsrichtung $d^{(k)}$, d.\,h. eine
+\item  Man berechnet eine \highl{Abstiegsrichtung} $d^{(k)}$, d.\,h. eine
   Richtung $d^{(k)}$ mit $f(x^{(k)} + td^{(k)})< f(x^{(k)})$ für
   hinreichend kleines $t>0$.
 \item Man berechnet eine geeignete Schrittweite $t_k$.
@@ -540,7 +544,7 @@ Optimierungsproblemen.
     l_A\leq A^{(1)}\leq u_A, A^{(2)}x=b\}$ heißt zulässige Menge
     (feasible set).
   \item Ein Punkt $\tilde{x}\in\FF$ (zulässiger Punkt) heißt
-    \emph{optimal}, falls $\forall x\in\FF\colon f(x)\geq f(\tilde{x})$
+    \highl{optimal}, falls $\forall x\in\FF\colon f(x)\geq f(\tilde{x})$
     gilt, d.\,h. $\tilde{x}$ ist globales Minimum von $f$ auf $\FF$.
   \end{itemize}
 \end{bem*}
@@ -623,13 +627,13 @@ Optimierungsproblemen.
 
 Wie kann man nun ein Problem in kanonischer Form in Standardform
 umwandeln? Die Lösung ist hier die Einführung von
-\emph{Schlupfvariablen}.
+\highl{Schlupfvariablen}.
 
 \begin{bsp}
   Sei folgende Aufgabe gegeben:\\
   Maximiere $x_{1}+x_{2}$ unter den Nebenbedingungen $x_{1}+
   3x_{2}\leq 13, 3x_{1}+x_{2}\leq 15, -x_{1}+x_{2}\leq 3, x_{i}\geq
-  0$. Wir führen die \emph{Schlupfvariablen}\index{Schlupfvariable}
+  0$. Wir führen die \highl[Schlupfvariable]{Schlupfvariablen}
   $x_{3}, x_{4}, x_{5}$ ein und ersetzen die Ungleichung durch:
   \begin{align*}
     x_{1} + 3x_{2} + x_{3} &= 13\\
@@ -711,16 +715,15 @@ Webseite \url{http://www.scilab.org/}.
 \section{Konvexe Mengen}
 
 \begin{defin}
-  Ein Menge $C\subset\R^{n}$ heißt \emph{konvex}\index{Menge!konvexe},
+  Ein Menge $C\subset\R^{n}$ heißt \highl{konvex}\index{Menge!konvexe},
   falls mit $x,y\in C$ und $\alpha\in(0,1)$ auch der Punkt
   $(1-\alpha)x+ \alpha y\in C$ ist.
 \end{defin}
 
 \begin{bem*}
   Seien $x,y\in C$. Dann heißt $[x,y] := \set{(1-\alpha)x + \alpha y|
-  \alpha\in [0,1]}$ \emph{Verbindungsstrecke}
-  \index{Verbindungsstrecke} von $x$ und $y$. Konvexität heißt $x,y\in
-  C\Rightarrow[x,y]\in C$
+  \alpha\in [0,1]}$ \highl{Verbindungsstrecke}
+  von $x$ und $y$. Konvexität heißt $x,y\in C\Rightarrow[x,y]\in C$
 \end{bem*}
 
 \begin{bsp}
@@ -769,8 +772,8 @@ Webseite \url{http://www.scilab.org/}.
   m$. Weiter sei $K=\set{x\in\R^{n}| \langle a^{(i)}, x\rangle =
   b^{(i)}, i=1,\ldots,s, \langle a^{(i)}, x\rangle\leq b^{(i)}, i=s+1,
   \ldots, n}$ die Lösungsmenge eines Systems linearer Gleichungen und
-  Ungleichungen. Man nennt $K$ auch \emph{Polyeder}\index{Polyeder}.
-  Es wird behauptet, dass $K$ konvex ist.
+  Ungleichungen. Man nennt $K$ auch \highl{Polyeder}. Es wird
+  behauptet, dass $K$ konvex ist.
 
   Sei $C_{i}= \set{x\in\R^{n}| \langle a^{(i)}, x\rangle=b_{i}}$ mit
   $i=1,\ldots,s$ bzw. $C_{i}= \set{x\in\R^{n}| \langle a^{(i)},
@@ -827,7 +830,7 @@ Webseite \url{http://www.scilab.org/}.
 \end{bem*}
 
 \begin{defin}
-  Eine \emph{Konvexkombination}\index{Konvexkombination} von Punkten
+  Eine \highl{Konvexkombination} von Punkten
   $x^{(1)},\ldots,x^{(k)}\in\R^{n}$ ist ein Punkt der Form
   $\sum_{i=1}^{k} \alpha_{i} x^{(i)}$ mit $\alpha_{i}\geq 0,
   i=1,\ldots,k$ und $\sum_{i=1}^{k} \alpha_{i}=1$.
@@ -860,8 +863,8 @@ Webseite \url{http://www.scilab.org/}.
 \end{satz}
 
 \begin{defin}
-  Sei $A\in\R^{n}$ beliebig. Die \emph{konvexe
-  Hülle}\index{Hülle!konvexe} von $A$ ist die Menge
+  Sei $A\in\R^{n}$ beliebig. Die \highl[Hülle!konvexe]{konvexe
+  Hülle} von $A$ ist die Menge
   \[\bigcap_{A\subset C} C\]
   Dies ist die kleinste konvexe Menge, die $A$ umfasst.
 \end{defin}
@@ -888,7 +891,7 @@ ist.
 
 \begin{defin}[geometrische Definition einer Ecke]
   Sei $\FF$ die zulässige Menge eines linearen Optimierungsproblems.
-  Dann heißt ein Punkt $x\in\FF$ \emph{Ecke}\index{Ecke} von $\FF$,
+  Dann heißt ein Punkt $x\in\FF$ \highl{Ecke} von $\FF$,
   falls $x$ nicht als Konvexkombination $x=(1-\alpha)y+\alpha z$ mit
   $y,z\in\FF, y\neq z, \alpha\in(0,1)$ darstellbar ist.
 \end{defin}
@@ -1286,12 +1289,13 @@ x_{B}=b$.
   gleich $m$ ist. Weiter sei $J_{B}\subset\{1,\ldots,n\}$ eine
   Indexmenge, so dass $A_{B}$ invertierbar ist. Der eindeutig
   bestimmte Vektor $x$ mit $A_{B} x_{B}=b, x_{N}=0$ heißt
-  \emph{Basislösung}\index{Basislösung} des Systems $Ax=b$ zur Basis
+  \highl{Basislösung} des Systems $Ax=b$ zur Basis
   $B$. Die Variablen $x_{B}$ heißen
-  \emph{Basisvariablen}\index{Basisvariablen}, $x_{N}$ heißen
-  \emph{Nichtbasisvariablen}\index{Nichtbasisvariablen}. Die
-  Basislösung $x$ zur Basis $B$ heißt \emph{zulässige
-  Basislösung}\index{Basislösung!zulässige}, falls $x\geq 0$.
+  \highl{Basisvariablen}, $x_{N}$ heißen
+  \highl{Nichtbasisvariablen}. Die
+  Basislösung $x$ zur Basis $B$ heißt
+  \highl[Basislösung!zulässige]{zulässige Basislösung}, falls $x\geq
+  0$.
 \end{defin}
 
 \begin{bem*}
@@ -1629,7 +1633,7 @@ nicht entartet ist.
 \begin{defin}
   Sei $A\in\R^{m\times n}$ mit $\rg(A)=m\leq n, b\in\R^{m}, \FF=
   \set{x\in\R^{n}| Ax=b, x\geq 0}, B$ Basis von $A$. Eine zulässige
-  Basislösung $x\in\FF$ heißt \emph{nicht entartet}, wenn $x_{B}>0$
+  Basislösung $x\in\FF$ heißt \highl{nicht entartet}, wenn $x_{B}>0$
 \end{defin}
 
 \begin{bem*}
@@ -1780,7 +1784,7 @@ Damit folgt:
      \{1,\ldots,m\} \text{ mit } \widehat{A_{\nu,j}}>0}
 \end{gather}
 
-Der Punkt $v(\sigma)$ ist \emph{Randpunkt} von $\FF_{B}$. Zunächst
+Der Punkt $v(\sigma)$ ist \highl{Randpunkt} von $\FF_{B}$. Zunächst
 gilt, $x^{+}\in\FF$ wegen des \autoref{lem:31}. Wir müssen noch eine
 Basis $B^{+}$ von $A$ finden, so dass $x^{+}$ Basislösung von $B^{+}$
 ist.
@@ -2368,12 +2372,12 @@ den Basistausch.
 \subsection{Die lexikografische Zusatzregel}
 
 \begin{defin}
-  Ein Vektor $x\in\R^{n}\setminus\{0_{n}\}$ heißt \emph{lexikografisch
-  positiv}\index{lexikografisch positiv}, wofür wir $x\prec 0_{n}$
-  schreiben, wenn die erste von Null verschieden Komponente größer als
-  Null ist.\\
-  Sind $x,y\in\R^{n}$, dann heißt $x$ lexikografisch größer $y$, falls
-  $x-y>0$ ist.
+  Ein Vektor $x\in\R^{n}\setminus\{0_{n}\}$ heißt
+  \highl{lexikografisch positiv}, wofür wir $x\prec 0_{n}$ schreiben,
+  wenn die erste von Null verschieden Komponente größer als Null
+  ist.\\
+  Sind $x,y\in\R^{n}$, dann heißt $x$ lexikografisch größer
+  $y$, falls $x-y>0$ ist.
 \end{defin}
 
 \begin{bsp}
